--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Fixer Current</title>
+    <title>Foreign Exchange Rates by Ivan Fung</title>
     <style>
     
     /* color reference : https://coolors.co/palettes/popular/professional*/
